[package]
name = "chives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
csv = "1.2.2"
regex = "1.8.4"
unidecode = "0.3.0"
anyhow = "1.0.71"